[project]
name = "tgbotfortransmittingmeter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.19.0",
    "aiosqlite>=0.21.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.8.1",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
